Done - Navbar and Landing pages

--- a/natural-nest/package.json
+++ b/natural-nest/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
     "lucide-react": "^0.484.0",
+    "natural-nest": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
